# serva

./: Cargo.toml  LICENSE  README.md  build.rs  justfile
proto/: api.proto
src/: data.rs  grpc.rs  main.rs  multiplex.rs  serve.rs
webapp/: package.json
webapp/config/: webpack.config.js
webapp/public/: index.html
webapp/src/: App.css  App.tsx  FileSystem.ts  GrpcClient.ts  index.tsx
