[package]
name = "serva"
version = "0.2.0"
edition = "2021"
description = "An http server for easily transfer/manage files on different devices"
license = "AGPL-3.0"
documentation = "https://github.com/CliffHan/serva"
homepage = "https://github.com/CliffHan/serva"
repository = "https://github.com/CliffHan/serva"
exclude = ["/webapp/node_modules"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["http2", "multipart", "ws"] }
clap = { version = "3.2", features = ["cargo", "derive"] }
env_logger = "0.9"
fs_extra = "1.2"
futures = "0.3"
get_if_addrs = "0.5"
http = "0.2"
http-range-header = "0.3"
hyper = { version = "0.14",  features = ["full"] }
log = "0.4"
mime_guess = "2.0"
prost = "0.10"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.7"
tonic-web = "0.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }

[build-dependencies]
const_format = "0.2"
tonic-build = { version = "0.7", features = ["prost"] }

# refer to https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*